--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpeg" alt="Rajendra Gurjar" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" alt="Rajendra Gurjar" />
             <div class="profile-content pull-left">
                 <h1 class="name">Rajendra Gurjar</h1>
-                <h2 class="desc">App Developer</h2>   
+                <h2 class="desc">FullStack Developer</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
