--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
                                
-                                <p><a class="more-link" href="#"><i class="fa fa-external-link"></i> More on Linkedin</a></p> 
+                                <p><a class="more-link" href="https://www.linkedin.com/in/rajguja-3477/"><i class="fa fa-external-link"></i> More on Linkedin</a></p> 
                             </div>              
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
