--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                         <div class="content">    
                                                
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">KickStarter - Velocity</a></h3>
-                                <p class="summary">A responsive Bootstrap template designed for digital products</p>
+                                <h3 class="title"><a href="https://www.ostadelahi-indepth.com/" target="_blank">ostadelahi-indepth</a></h3>
+                                <p class="summary">OSTADELAHI-INDEPTH is a site created to analyze and explore the system of thought of Ostad Elahi (1895-1974)—a contemporary thinker, jurist, and musician—from a historical, philosophical, and metaphysical perspective.</p>
                                 <div class="featured-image">
-                                    <a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">
+                                    <a href="https://www.ostadelahi-indepth.com/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
