--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/rajguja-3477/"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/gurjarr587"><i class="fa fa-github-alt"></i></a></li>                  
-                    <li class="last-item"><a href="https://www.hackerrank.com/gurjarr587"><i class="fa fa-hackerrank"></i></a></li>                 
+                    <li class="last-item"><a href="https://www.hackerrank.com/gurjarr587"><i class="fab fa-hackerrank"></i></a></li>                 
                 </ul> 
             </div><!--//profile-->
             <a class="btn btn-cta-primary pull-right" href="#" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>              
