--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                             </div><!--//item-->
                             
                             <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://github.com/gurjarr587" target="_blank">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://github.com/gurjarr587/.Netc-/blob/master/JQCalculator.html" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project-4.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="https://github.com/gurjarr587" target="_blank">Calculator</a></h3>
+                                    <h3 class="title"><a href="https://github.com/gurjarr587/.Netc-/blob/master/JQCalculator.html" target="_blank">Calculator</a></h3>
                                     <p>Its a simple calculator to do basic tasks of mathematics</p>
-                                    <p><a class="more-link" href="https://github.com/gurjarr587" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                    <p><a class="more-link" href="https://github.com/gurjarr587/.Netc-/blob/master/JQCalculator.html" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
                             
