--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <aside class="blog aside section">
                     <div class="section-inner">
                         <h2 class="heading">Latest Blog Posts</h2>
-                        <p>You can use Rajendra Gurjar <a href="https://github.com/gurjarr587" target="_blank">HackerRank Solutions</a> To pull in your Python tasks.</p>
+                        <p>You can use Rajendra Gurjar <a href="https://github.com/gurjarr587/HackerRankPythonSolution-s" target="_blank">HackerRank Solutions</a> To pull in your Python tasks.</p>
                         <div id="rss-feeds" class="content">
 
                         </div><!--//content-->
