--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" alt="Rajendra Gurjar" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Rajendra Gurjar" />
             <div class="profile-content pull-left">
                 <h1 class="name">Rajendra Gurjar</h1>
                 <h2 class="desc">FullStack Developer</h2>   
