--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
                             </div><!--//item-->
                             
 							<div class="item">
-                                <h3 class="title"><a href="#">Project Title Python-host scanner-gui</a> 
+                                <h3 class="title"><a href="#">Project Title Python-host scanner-gui</a></h3> 
                                 <p class="summary">Python 3.5, Apache24, SQLlite3.Implemented Python 3.5 to create a CGI/GUI program (using ttkinter) that can be used for scanning open ports at any IP address. </p>
                                 <p><a class="more-link" href="https://github.com/gurjarr587/Python-3.5" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             
 							<div class="item">
-                                <h3 class="title"><a href="#">Project Title Search Engine & Video line</a> 
+                                <h3 class="title"><a href="#">Project Title Search Engine & Video line</a><h3> 
                                 <p class="summary">Developed web application to fetch unclustered data from Stack Overflow using Interpolation Algorithm and to save it into Excel sheets, PDF for the use of industry purpose in clustered form. Implemented PHP to fetch data using CodeIgniter Framework MVC.</p>
                                 <p><a class="more-link" href="https://github.com/gurjarr587" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
