--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             </div><!--//item-->
                             
 							<div class="item">
-                                <h3 class="title"><a href="#">Project Title Search Engine & Video line</a><h3> 
+                                <h3 class="title"><a href="#">Project Title Search Engine & Video line</a></h3> 
                                 <p class="summary">Developed web application to fetch unclustered data from Stack Overflow using Interpolation Algorithm and to save it into Excel sheets, PDF for the use of industry purpose in clustered form. Implemented PHP to fetch data using CodeIgniter Framework MVC.</p>
                                 <p><a class="more-link" href="https://github.com/gurjarr587" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
